--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -2,13 +2,11 @@ name: Java CI with Quarkus
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
